# rapid-hire

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/criteria/: backend_engineer.md  general.md
data/sample_jobs/: backend_engineer.md  ml_engineer.md
data/sample_resumes/: elena_vasquez.docx  marcus_bell.md  priya_raman.txt
docs/: deployment.md  system_design.md
src/rapidhire/: __init__.py  app.py  cli.py  config.py  crew.py  logging.py  models.py  panel.py  vectorstore.py
src/rapidhire/agents/: __init__.py  intake.py  matching.py  orchestrator.py  screening.py
src/rapidhire/tools/: __init__.py  matching.py  parsing.py  scoring.py
tests/: conftest.py  test_crew.py  test_tools.py  test_vectorstore.py
